--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@types/node": "22.5.5",
     "@types/react": "18.3.7",
     "@types/react-dom": "18.3.0",
+    "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.12",
+    "immer": "^10.1.1",
     "next": "14.2.12",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "typescript": "5.6.2"
+    "sass": "^1.79.1",
+    "typescript": "5.6.2",
+    "zustand": "^5.0.0-rc.2"
   }
 }
